k8s/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
  labels:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/part-of: azure-hub-spoke-aks
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - name: http
      port: 80
      targetPort: http
